# slopwith

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  README.md
.github/agents/: disasm.agent.md
.github/instructions/: disasm.instructions.md
.github/prompts/: ghidra-analysis.prompt.md  wasm-porting.prompt.md
.github/skills/disasm/: SKILL.md
artifacts/disasm/: signature_offsets.txt  strings_min6.txt  triage.json
artifacts/disasm/decoded/: index.json  remaining_items.json  remaining_items.txt
artifacts/disasm/decoded/palettes/: palette_001.json  palette_001_swatch.ppm  palette_002.json  palette_002_swatch.ppm  palette_003.json  palette_003_swatch.ppm  palette_004.json  palette_004_swatch.ppm  palette_005.json  palette_005_swatch.ppm  (+12 more)
artifacts/disasm/disassembly/: code_candidate.objdump.asm
artifacts/disasm/segments/: assets_candidate.hex.txt  assets_candidate.strings.txt  code_candidate.hex.txt  code_candidate.strings.txt
artifacts/disasm/transpile/: README.md  sopwith_image.asm
docs/reverse/: asset-formats-and-viewers.md  extraction-manifest.md  handoff-2026-03-11.md  parity-gap-review-2026-03-11.md  triage.md
docs/spec/: wasm-transpile-backlog.md
engine_core/: Cargo.toml
engine_core/src/: lib.rs
plans/: DISASSEMBLY_TO_WASM_PLAN.md  REVERSE_ENGINEERING_TOOLS_WINDOWS.md
platform_web/: README.md
platform_web/www/: assets_pack.json  engine_core.js  engine_core.wasm  index.html  main.js
scripts/: Build-WasmPreview.ps1  Extract-SopwithArtifacts.ps1  Start-DosboxTest.ps1
tools/hexlab/: Cargo.toml  README.md
tools/hexlab/src/: main.rs
(+110 files in other folders)
